# earth_digital_twin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
notebooks/: tempo_earth2_integration.ipynb
scripts/: make_og_card.py
website/: CNAME  app.js  arch-plexus-bg.js  earth-plexus-bg.js  index.html  styles.css
website/assets/: digital_earth_logo.ai
