[project]
name = "earth-digital-twin"
version = "0.1.0"
description = "Smithsonian Living Earth Digital Twin — seed-award prototype"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "h5netcdf>=1.3",
    "matplotlib>=3.8",
    "cartopy>=0.23",
    "requests>=2.31",
    "earthaccess>=0.10",
    "torch>=2.2",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[tool.uv]
# Keep torch on CPU wheels — the notebook is CPU-only by design (see CLAUDE.md).
# earth2studio itself requires a GPU and is intentionally NOT pinned here.
